--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,4 +1,4 @@
-@import 'reset.scss';
+@import './reset.scss';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Rubik:ital,wght@0,400;0,500;1,400&display=swap');
 
 .container {
